# AcousticTracer

./: .gitignore  README.md  proposal.tex  run.sh
assets/glb/: L_room_roof.glb  L_room_roof.gltf  Sponza.gltf  box_room.gltf  box_room_no_roof.glb  box_room_roof.glb  box_room_roof.gltf
backend/net/: at_net.c  at_net.h
blender/: L_room.blend  box_room.blend
contributors/: README.md  alexodwright.md  eoghanmurphy.md  michaelmccarthy.md
core/: CMakeLists.txt  doxygen_config
core/core_dev/: main.c  spec.txt
core/dev/: test_RayHits.c  test_aabb.c  test_current_state.c  test_model.c  test_model_ray.c  test_ray_init.c  test_ray_reflect.c  test_ray_scattering.c  test_simulation_run_rays.c  test_voxel.c  test_voxel_ray_step.c
core/dev/bvh/: test_bvh_creation.c  test_bvh_sort.c  test_median_range.c  test_sort.zsh  test_tri_group.c  test_tri_group_ray.c
core/include/acoustic/: at.h  at_math.h  at_model.h  at_result.h  at_scene.h  at_simulation.h  at_voxel.h
core/src/: at.h  at_aabb.c  at_aabb.h  at_bvh.c  at_bvh.h  at_internal.h  at_math.h  at_model.c  at_ray.c  at_ray.h  at_scene.c  at_simulation.c  at_trigroup.c  at_trigroup.h  at_utils.h  at_voxel.c  at_voxel.h
docs/: Makefile  README.md  filter-headings.lua  header.yaml  projectsummary.md  proposal.tex  report.md  workflow.md
docs/core/html/: _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  at_8h.html  at_8h.js  at_8h_source.html  at__math_8h.html  at__math_8h.js  at__math_8h_source.html  at__model_8h.html  at__model_8h.js  at__model_8h_source.html  at__result_8h.html  at__result_8h_source.html  at__scene_8h.html  at__scene_8h.js  at__scene_8h_source.html  at__simulation_8h.html  at__simulation_8h.js  at__simulation_8h_source.html  classes.html  dir_32685ae3843b5ca2e1d1062cb00ef9fd.html  dir_32685ae3843b5ca2e1d1062cb00ef9fd.js  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  group__aabb.html  group__aabb.js  group__mat.html  group__mat.js  group__math.html  (+41 more)
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js  web_conventions.md
web/src/: App.jsx  App.tsx  main.tsx  styles.css  stylesold.css
web/src/api/: contracts.js  contracts.ts  http.js  simulations.js  simulations.ts
web/src/app/: index.css  provider.tsx  router.tsx
web/src/components/: PlaybackView.jsx  SimDetails.tsx  SimulationStatus.jsx  UploadForm.jsx  UploadForm.tsx  app-layout.tsx  feature-error-boundary.tsx  main-error-fallback.tsx  toast.tsx
web/src/lib/: appwrite.ts  query-keys.ts
web/src/pages/: Dashboard.tsx  Login.tsx  Scene.tsx  index.ts
web/src/playback/: chunkCache.js  chunkDecoder.js  playerController.js
web/src/r3f/: SceneCanvas.jsx  SceneCanvas.tsx  VoxelInstancedMesh.jsx  (+1 more)
(+78 files in other folders)
